# prism

./: .gitignore  README.md  core-model.listing_config.json  core-model.roadmap.listing_config.json  docs.listing_config.json  listing_generator.py
adapters/xlsx/: README.md  ROADMAP.md  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt
adapters/xlsx/src/bims/prism/adapters/: __init__.py
adapters/xlsx/tests/fixtures/: sample_sizing.json
adapters/xlsx/tests/unit/: test_smoke.py  test_totals_snapshot.py  xlsx_util.py
common/: pyproject.toml
common/src/bims/: __init__.py
common/src/bims/prism/common/schemas/: load_profile.schema.json  project.schema.json
core-model/: README.md  ROADMAP.md  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt
core-model/scripts/: gen_models.py
core-model/src/bims/prism/: cli.py  eval.py  graph.py  units.py
core-model/src/bims/prism/models/: __init__.py  blueprint.py  load_profile.py  project.py  sizing_result.py
core-model/src/bims/prism/models/_gen/: load_profile_gen.py  (+1 more)
core-model/src/bims/prism/schemas/: blueprint.schema.json  project.schema.json  resource_profile.schema.json  sizing_result.schema.json
core-model/tests/fixtures/: altblueprint.yaml  depblueprint.yaml  expected.json  miniblueprint.yaml  miniload.yaml  project.yaml
core-model/tests/unit/: test_engine.py  test_load_profile_schema.py  test_multizone.py  test_overrides.py  test_resource_profile_schema.py  test_units_converter.py  test_zone_multiplier.py
core-model/tests/unit/model/: test_load_profile_schema.py
(+22 files in other folders)
