[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-common"
version = "0.1.0"
description = "Shared helpers and schemas for PRISM modules"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bims.prism.common*"]
