[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-adapters-xlsx"
version = "0.2.0"
description = "XLSX report generator for PRISM"
requires-python = ">=3.12"
dependencies = [
    "prism-common>=0.1.0",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "jinja2>=3.1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bims.prism.adapters.xlsx*"]
